@@ -81,6 +81,7 @@ quickjs/unicode_gen.c
 quickjs/unicode_gen_def.h
 t/basic.t
 t/callback_err.t
+t/callback_invalid_sv.t
 t/export_ref.t
 t/js2perl.t
 t/js_func_to_perl.t
